syntax = "proto3";

package exchange;

option go_package = "gw-exchange/proto";

// Определение сервиса обмена валют
service ExchangeService {
  // Получение курсов обмена всех валют
  rpc GetExchangeRates(Empty) returns (ExchangeRatesResponse);

  // Получение курса обмена для конкретной валюты
  rpc GetExchangeRateForCurrency(CurrencyRequest) returns (ExchangeRateResponse);
}

// Запрос для получения курса обмена для конкретной валюты(конкретной пары валют)
message CurrencyRequest {
  string from_currency = 1; // Исходная валюта (например, "USD")
  string to_currency = 2; // Целевая валюта (например, "EUR")
}

// Ответ с курсом обмена для конкретной валюты(пары валют)
message ExchangeRateResponse {
  string from_currency = 1; // Исходная валюта
  string to_currency = 2; // Целевая валюта
  float rate = 3; // Курс обмена
}

// Ответ с курсами обмена всех валют
message ExchangeRatesResponse {
  map<string, float> rates = 1; // ключ: валюта, значение: курс
}

// Пустое сообщение(запрос)
message Empty {}